# Kosmos

./: .gitignore  .gitlab-ci.yml  docker-compose.yml
app/: Dockerfile  (+10 more)
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Rocket.toml  backup.sh  docker-compose-dev.yml  restore.sh
backend/.cargo/: config.toml
backend/.sqlx/: query-00d938189dc21c3c1e60389f442932413b3db943fe3c9b0eb56ad63a13a811b7.json  query-0359d3f62d68aca5cab134571be062d17f4a4100770e279f18ee0bc6c012c2fc.json  query-044a33470d75b7a0c5c9e4774a075551be4696958bfdfa7eddf5eb2ace4b7c42.json  query-0637a708701d0f043148cb0989bccbb05a0ad5cd54d36c2a255cfeed190fe92a.json  query-06f76fe5ef69766d97730850f686906c53159109fa0fa8fc3b2df80538109d53.json  query-0856541d334ec7d6a9beb2ee5cb9d0a88cf7f08a7d54f0fcdbd9c0140a825e2b.json  query-095b1e1990695cf435d8c2bed568f888abda600c0ec14f36e544b05404c8bb12.json  query-0c3147055ff99d3b9b71d4906b46dac05c59840944df3cdd602540e6a4a1fb3d.json  query-0e654494cc4c050ba04873cced5a1beaf5c59e909b36c01b0f6b4ecdbea6d14c.json  query-1132ee538271d02600f008ead62aa251983afb7763ad66fe5b5779660c16ac0a.json  query-1899f98997367d9e15a5efc13576b19fd788bc47b05228ba1a32e8e18db30dab.json  query-1a0793f258f967fd89a3691e529c9bc3db6e2e19d373d600972eadee9f5a4101.json  query-1cb7bde57fbb10fd3ec72abbb9412d3a86e7bde48b4fb01d503f1dd409c0ae75.json  query-1fb9f316a9bf8eddfcded33918d461dfc3c2231543f8c443b4e2b0aef6e208c6.json  query-20bb9029c84b5ede829d967019efd842f87dbb11880c780e0933904eebe8362c.json  query-24ea33795a75c8cf5a55ee719369e1860de7e7e46cddfd4dcb02a4452c9856bf.json  query-25b52d658169f425e134ab502f38bfe94faf2ad6ca5f4725e182ce4662d1f3fe.json  query-26357e5b1b03d776aa9ce3c9d1cf253c1fc91b5e433fa873e3268e508dcfcc6d.json  query-2a95ba2b301d8c1dc439891a5aec1cc26a0187e8e3d5e8901c762147aba593e0.json  query-2d8060eb446ef8c73808495d1d2a3c626c878136fecd5f45cc4188ee0cb4c5b3.json  query-3297d3bb578322c85463264429a026e25d1ccf897ad04a18342abb585abe522b.json  query-334f27fadae2c00399b31f4a2e28664aa9b56530dd461f673cdaec662ff6efe9.json  query-3404b5b63e8d09031a79e271fa1f6e9768b35b00a62acd8d2f84e374b11d1d16.json  query-343cd5b5d549be64eb66e6390de1739d62bc2fa86b02829de878aef0e4e4f490.json  query-3484e7c875176c8e7c01dee9e544b270eaa6d8b1a80c7049ca29a824c79b15e0.json  query-34fe8e9ecb68f9d6ae0281a6cfb5f082ace2337905feb96b7588305476bafa09.json  query-36e5806a539cc8afe15ea6dc8644ce789007b5886156b68e410dc79770187771.json  query-37bede9c722146c2569dadf1bc47d59ea6c4ef38db8008deadb9d5c66d7a880b.json  query-3b7d5d0d3b2db96969e20ccff341f90814ec6911658b19b8d700d34a90f65d15.json  query-445f8540b9bd40f958bcf68ba15e8ca51ffb5c17c2b2b3638b9fe00ae8cad42d.json  query-4797b2cdc6974bc639689137155c619f0aa5f29d462bce704b85043ccced4a79.json  query-4e2c835b8b2c41db1a7ed0b4e0032e78da205fb787efce78d5255676a5a54754.json  query-4f4a2450658d493b9c507c0bbb444e04082160d83e64cf201994de82711d6720.json  query-54e83f91c256ac0eac126a7a7c6d04706c17c6a1c739431314006a79982ecef1.json  query-595966c737dad9ffe25e419f47a416aa43a010f84bebc27b68cb1d27427c53db.json  query-59c7bb4cb4b323f2881988ba302fd6e6857ce39cf7f10f33d8f1fcc3558f045f.json  query-5c0a5dfdb07420ef663e15cd0a5c930f7b068aea4bccc9acce49dd1bfd817cdf.json  query-63745e97add19e0228ff939827ffb641c15437fe092a71b0fb1e213531db4186.json  query-6440e73a9378abe72c98a9c896b8dc54f76bdc3d7826005d3b7d556802d8ae56.json  query-647af3e9178b4f6a8c03d70c00fe8adf0fd2ba4bcdac499696508e5279287d4e.json  (+53 more)
backend/bindings/: AlbumModelWithShareInfoDTO.ts  ExtendedShareModelDTO.ts  FileModelWithShareInfoDTO.ts  FolderResponse.ts  PasskeyModelDTO.ts  Permission.ts  ShareFileModelDTO.ts  ShareFolderModelDTO.ts  SharedAlbumModelDTO.ts
backend/migrations/: 20240511152404_user_table.sql  20240512092342_folder_table.sql  20240512092344_file_table.sql  20240516085906_image_format_table.sql  (+15 more)
(+403 files in other folders)
