[package]
name = "kosmos"
version = "0.1.0"
edition = "2021"
authors = ["Philipp Hergenhahn <philipp.hergenhahn@setilic.com>"]
repository = "https://git.flouet.com/philipp.hergenhahn/kosmos"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["io"] }
axum = { version = "0.7.5", features = ["json", "multipart"] }
photon-rs = { version = "0.3.2" }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = { version = "1.0.117" }
sqlx = { version = "0.7.4", features = ["runtime-async-std-rustls", "postgres", "chrono", "bigdecimal"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
tower-sessions = "0.12.2"
bcrypt = "0.15.1"
tower-http = { version = "0.5.2", features = ["cors", "trace", "fs"] }
dotenvy = "0.15.7"
log = "0.4.21"
sonyflake = "0.2.0"
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.30"
zip = "2.1.0"
validator = { version = "0.18.1", features = ["derive"] }
axum-valid = "0.18.0"
lazy_static = "1.4.0"
itertools = "0.13.0"