[package]
name = "kosmos"
version = "0.1.0"
edition = "2021"
authors = ["Philipp Hergenhahn <philipp.hergenhahn@setilic.com>"]
repository = "https://git.flouet.com/philipp.hergenhahn/kosmos"

[dependencies]
# Async
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["io"] }
futures = "0.3.30"

# HTTP
axum = { version = "0.7.5", features = ["json", "multipart"] }

# Image
# photon-rs = { version = "0.3.2" }
image = "0.25.2"
kamadak-exif = "0.5.5"

# Serialization
serde = { version = "1.0.201", features = ["derive"] }
serde_json = { version = "1.0.117" }

# Database
sqlx = { version = "0.8.0", features = ["runtime-tokio", "postgres", "chrono", "bigdecimal", "uuid"] }
sonyflake = "0.2.0"
bigdecimal = "0.4.5"

# Tracing
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
log = "0.4.21"

# Session
tower-sessions = "0.12.2"
tower-http = { version = "0.5.2", features = ["cors", "trace", "fs"] }

# Auth
bcrypt = "0.15.1"
webauthn-rs = { version = "0.5.0", features = ["danger-allow-state-serialisation", "conditional-ui"] }

# Utils
lazy_static = "1.4.0"
itertools = "0.13.0"
chrono = { version = "0.4.38", features = ["serde"] }

# Validation
axum-valid = "0.19.0"
validator = { version = "0.18.1", features = ["derive"] }

# Config
dotenvy = "0.15.7"

# Misc
zip = "2.1.0"
